--- a/pages/selectedPand/haser.html
+++ b/pages/selectedPand/haser.html
@@ -558,7 +558,8 @@
                 true, // إظهار العنوان
                 false, // عدم إضافة صف بالنقر
                 true, // بدء بصف جديد
-                true // ترقيم الصفوف
+                true, // ترقيم الصفوف
+                true//عناصر ادخال الارقام تجتوي علي جداول
             );
 
             // تعيين القيم الافتراضية وتحميل القيم المخزنة
@@ -987,7 +988,7 @@
 
         if ( approvedValueSum === 0 )
         {
-            throw new Error( "⚠️ مجموع الكميات المعتمدة (بعد ضربها بالنسب) يساوي صفر، لا يمكن إتمام الحسابات." );
+            console.log( "⚠️ مجموع الكميات المعتمدة (بعد ضربها بالنسب) يساوي صفر، لا يمكن إتمام الحسابات." );
         }
 
         const foundPrice = weightedPriceSum / approvedWeights;
