--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
       document.addEventListener( "DOMContentLoaded", async () =>
       {
-        while ( ( await getLoadLangImageLists() ) == false )
+
+        while (  await getLoadLangImageLists()  == false )
         {
           await new Promise( ( resolve ) => setTimeout( resolve, 100 ) );
         }
