--- a/pages/tools.html
+++ b/pages/tools.html
@@ -128,7 +128,7 @@
                 await loadHistory();
                 break;
             case 'numbring':
-                await initSettingPage();
+               // await initSettingPage();
                 break;
 
         }
